@@ -1,3 +1,7 @@
+2004-11-19  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b277
+
+	* Fix: publish_xp issues with register_globals, and debug error display
+
 2004-11-19  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b276
 
 	* Fix 1069232: Big applet didn't work embedded
